--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch align-items-md-center">
             <div class="content">
-              <h3>Why Choose Medilab?</h3>
+              <h3>Why Choose Upceurg?</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Duis aute irure dolor in reprehenderit
@@ -927,8 +927,8 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Medilab</h3>
+          <div class="col-lg-4 col-md-6 footer-contact">
+            <h3>Upceurg</h3>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -938,7 +938,7 @@
             </p>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -949,7 +949,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -978,7 +978,7 @@
         <div class="copyright">
           &copy; Copyright <strong><span>Upceurg</span></strong>. Todos os direitos reservados.
         </div>
-        <div class="credits">
+        <div class="credits text-decoration-underline">
           Desenvolvido por <a href="https://leonardo-soares.github.io/Leonardo-Soares/">Leoardo Soaes</a>
         </div>
       </div>
