--- a/index.html
+++ b/index.html
@@ -208,36 +208,36 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="fas fa-user-md"></i>
-              <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Doctors</p>
+              <p>Pesquisadores</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="far fa-hospital"></i>
-              <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Departments</p>
+              <p>Áreas de Atuação</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="fas fa-flask"></i>
-              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Research Labs</p>
+              <p>Pesquisas em Andamento</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="fas fa-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1"
+              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Awards</p>
+              <p>Reconhecimentos</p>
             </div>
           </div>
 
