Ajuste de botão de doação

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Apoie</span> o
-        Upceurg</a>
+      <a href="#appointment" class="appointment-btn scrollto">Apoie <span class="d-none d-md-inline"></span>o Upceurg</span></a>
 
     </div>
   </header><!-- End Header -->
